--- a/_config.yaml
+++ b/_config.yaml
@@ -1,5 +1,5 @@
-title: Cloud Native Databases DevRoom at FOSDEM 2025
-description: We’re excited to announce the new Cloud Native Databases devroom for FOSDEM 2025
+title: Databases DevRoom at FOSDEM 2026
+description: We’re excited to announce the Databases devroom for FOSDEM 2026
 show_downloads: false
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
